[package]
name = "bevy-web-resizer"
description = "Automatically resize your Bevy app on the web (wasm) to the size of the browser window"
version = "2.0.0"
edition = "2021"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/bevy-web-resizer"

[target.'cfg(target_arch = "wasm32")'.dependencies]
crossbeam-channel = "0.5"
bevy = { version = "0.7", default-features = false, features = ["bevy_winit"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", default-features = false }
winit = "0.26"
